# attio-sfdc

./: .gitignore  CLAUDE.md  Cargo.toml  PROJECT_PLAN.md  README.md  config.example.toml  wrangler.toml
.claude/: settings.json
.claude/hooks/: on-stop.sh  post-edit.sh  session-start.sh  validate-bash.sh
.github/workflows/: ci.yml  nvs.yml  security.yml
benches/: sync.rs  transform.rs
src/: error.rs  lib.rs
src/attio/: client.rs  mod.rs  types.rs  webhooks.rs
src/attio/objects/: companies.rs  custom.rs  deals.rs  mod.rs  people.rs
src/config/: mappings.rs  mod.rs  validation.rs
src/salesforce/: auth.rs  bulk.rs  client.rs  mod.rs  types.rs
src/salesforce/objects/: account.rs  contact.rs  custom.rs  mod.rs  opportunity.rs
src/storage/: d1.rs  kv.rs  memory.rs  mod.rs
src/sync/: batch.rs  conflict.rs  cursor.rs  direction.rs  engine.rs  mod.rs
src/transform/: builtin.rs  field.rs  mod.rs  reference.rs
src/worker/: middleware.rs  mod.rs  routes.rs
