[package]
name = "attio-sfdc"
version = "0.1.0"
edition = "2021"
authors = ["Contributors"]
license = "MIT"
description = "A high-performance Rust bridge for bidirectional sync between Attio CRM and Salesforce"
repository = "https://github.com/nvsio/attio-sfdc"
keywords = ["crm", "attio", "salesforce", "sync", "cloudflare-workers"]
categories = ["web-programming", "api-bindings"]

[lib]
crate-type = ["cdylib", "rlib"]

[[bin]]
name = "attio-sfdc-cli"
path = "src/bin/cli.rs"
required-features = ["cli"]

[features]
default = []
cli = ["tokio/full", "clap"]
real-api = []  # Enable tests against real APIs

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Cloudflare Workers
worker = "0.4"

# Async
futures = "0.3"
async-trait = "0.1"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Error handling
thiserror = "2.0"

# UUID generation
uuid = { version = "1.0", features = ["v4", "serde"] }

# Crypto for webhook signatures
hmac = "0.12"
sha2 = "0.10"
base64 = "0.22"

# URL handling
url = "2.5"

# CLI (optional)
clap = { version = "4.5", features = ["derive"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread"], optional = true }

[dev-dependencies]
tokio = { version = "1", features = ["full", "test-util"] }
wiremock = "0.6"
pretty_assertions = "1.4"
criterion = "0.5"
tempfile = "3.14"

[[bench]]
name = "transform"
harness = false

[[bench]]
name = "sync"
harness = false

[profile.release]
opt-level = "s"      # Optimize for size (important for WASM)
lto = true
codegen-units = 1
panic = "abort"

[profile.release.package."*"]
opt-level = "s"
